CHANGES
*******

0.2 (unreleased)
================

- Nothing changed yet.


0.1 (2014-07-07)
================

- Initial public release.